force-app/main/default/objects/RE_Config__c/RE_Config__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the relationship between Domain Category, Domain, Category and SubCategory picklist.</description>
    <label>Config</label>
    <nameField>
        <displayFormat>CID-{0000000000}</displayFormat>
        <label>Config ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Config</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>