force-app/main/default/objects/RE_Config__c/fields/Archetype__c.field-meta.xml
<CustomField>
    <fullName>Archetype__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is use to link Goal with multiple Archetype</description>
    <label>Archetype</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RE_Archetype__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub-Archetype</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RE_Archetype__c</referenceTo>
    <relationshipLabel>Config</relationshipLabel>
    <relationshipName>Config</relationshipName>
    <type>Lookup</type>
</CustomField>