force-app/main/default/objects/RE_Config__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>This field relates to Category global picklist.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category</valueSetName>
    </valueSet>
</CustomField>