force-app/main/default/objects/RE_Config__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>This field relates to Domain global picklist.</description>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Domain</valueSetName>
    </valueSet>
</CustomField>