force-app/main/default/objects/RE_Config__c/fields/DomainCategory__c.field-meta.xml
<CustomField>
    <fullName>DomainCategory__c</fullName>
    <description>This field relates to Domain Category global picklist.</description>
    <label>Domain Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DomainCategory</valueSetName>
    </valueSet>
</CustomField>