force-app/main/default/objects/RE_Config__c/fields/DomainImage__c.field-meta.xml
<CustomField>
    <fullName>DomainImage__c</fullName>
    <description>This is used to store an image for Domain</description>
    <label>Domain Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>