force-app/main/default/objects/RE_Config__c/fields/DomainOrder__c.field-meta.xml
<CustomField>
    <fullName>DomainOrder__c</fullName>
    <description>This is used to store the sequence of Domains on the landing page.</description>
    <label>Domain Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>