force-app/main/default/objects/RE_Config__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the Goal</description>
    <label>Goal</label>
    <referenceTo>RE_Goal__c</referenceTo>
    <relationshipLabel>Config</relationshipLabel>
    <relationshipName>Config</relationshipName>
    <type>Lookup</type>
</CustomField>