force-app/main/default/objects/RE_Config__c/fields/IsMaster__c.field-meta.xml
<CustomField>
    <fullName>IsMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to identify master record for each domain.</description>
    <label>Is Master</label>
    <type>Checkbox</type>
</CustomField>