force-app/main/default/objects/RE_Config__c/fields/ParentConfig__c.field-meta.xml
<CustomField>
    <fullName>ParentConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be a lookup from Taxonomy Group member to Taxonomy Group</description>
    <label>Parent Config</label>
    <referenceTo>RE_Config__c</referenceTo>
    <relationshipLabel>Config</relationshipLabel>
    <relationshipName>Config</relationshipName>
    <type>Lookup</type>
</CustomField>