force-app/main/default/objects/RE_Config__c/fields/ShowCategory__c.field-meta.xml
<CustomField>
    <fullName>ShowCategory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to display categories in landing page.</description>
    <label>Show Category</label>
    <type>Checkbox</type>
</CustomField>