force-app/main/default/objects/RE_Config__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <description>This field relates to Sub-Category global picklist.</description>
    <label>Sub-category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubCategory</valueSetName>
    </valueSet>
</CustomField>