force-app/main/default/objects/RE_Config__c/fields/Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is use to store the Taxonomy</description>
    <label>Taxonomy</label>
    <referenceTo>RE_Taxonomy__c</referenceTo>
    <relationshipLabel>Config</relationshipLabel>
    <relationshipName>Config</relationshipName>
    <type>Lookup</type>
</CustomField>