force-app/main/default/objects/RE_Config__c/fields/TaxonomyGroupName__c.field-meta.xml
<CustomField>
    <fullName>TaxonomyGroupName__c</fullName>
    <description>This field will hold the name of the taxonomy group</description>
    <label>Taxonomy Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>