force-app/main/default/objects/RE_Config__c/recordTypes/DomainConfig.recordType-meta.xml
<RecordType>
    <fullName>DomainConfig</fullName>
    <active>true</active>
    <description>This record type is used to store relationship between Domain Category, Domain, Category and Sub Category.</description>
    <label>Domain Config</label>
</RecordType>