force-app/main/default/objects/RE_Config__c/recordTypes/Goal_Config.recordType-meta.xml
<RecordType>
    <fullName>Goal_Config</fullName>
    <active>true</active>
    <description>This record type is used to store relationship between Goal and Taxonomy</description>
    <label>Goal Config</label>
</RecordType>