force-app/main/default/objects/RE_Config__c/recordTypes/GoalArchetypeMapping.recordType-meta.xml
<RecordType>
    <fullName>GoalArchetypeMapping</fullName>
    <active>true</active>
    <description>This record type is use to map Goal with multiple Archetypes</description>
    <label>Goal Archetype Mapping</label>
</RecordType>