force-app/main/default/objects/RE_Config__c/recordTypes/SearchConfig.recordType-meta.xml
<RecordType>
    <fullName>SearchConfig</fullName>
    <active>true</active>
    <description>Record type for config search</description>
    <label>Search Config</label>
</RecordType>