force-app/main/default/objects/RE_Config__c/recordTypes/SuggestedResourceMapping.recordType-meta.xml
<RecordType>
    <fullName>SuggestedResourceMapping</fullName>
    <active>true</active>
    <label>Suggested Resource Mapping</label>
</RecordType>