force-app/main/default/objects/RE_Config__c/recordTypes/TaxonomyGroup.recordType-meta.xml
<RecordType>
    <fullName>TaxonomyGroup</fullName>
    <active>true</active>
    <description>Record with this record type will have multiple taxonomies clubbed in a group</description>
    <label>Taxonomy Group</label>
</RecordType>