force-app/main/default/objects/RE_Config__c/recordTypes/TaxonomyGroupMember.recordType-meta.xml
<RecordType>
    <fullName>TaxonomyGroupMember</fullName>
    <active>true</active>
    <description>Individual Taxonomies which will be part of different taxonomy groups as group members</description>
    <label>Taxonomy Group Member</label>
</RecordType>