force-app/main/default/objects/RE_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DomainCategory__c</columns>
    <columns>Domain__c</columns>
    <columns>Category__c</columns>
    <columns>Subcategory__c</columns>
    <columns>DomainOrder__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>