force-app/main/default/objects/RE_Config__c/listViews/Domain_Configs.listView-meta.xml
<ListView>
    <fullName>Domain_Configs</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Domain__c</columns>
    <columns>DomainCategory__c</columns>
    <columns>DomainImage__c</columns>
    <columns>DomainOrder__c</columns>
    <columns>IsMaster__c</columns>
    <columns>Goal__c</columns>
    <columns>Taxonomy__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Config__c.DomainConfig</value>
    </filters>
    <label>Domain Configs</label>
</ListView>