force-app/main/default/objects/RE_Config__c/listViews/Goal_Archetype.listView-meta.xml
<ListView>
    <fullName>Goal_Archetype</fullName>
    <columns>NAME</columns>
    <columns>Archetype__c</columns>
    <columns>Goal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Config__c.GoalArchetypeMapping</value>
    </filters>
    <label>Goal Archetype</label>
</ListView>