force-app/main/default/objects/RE_Config__c/listViews/Goal_Config.listView-meta.xml
<ListView>
    <fullName>Goal_Config</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Domain__c</columns>
    <columns>DomainCategory__c</columns>
    <columns>DomainImage__c</columns>
    <columns>DomainOrder__c</columns>
    <columns>IsMaster__c</columns>
    <columns>Goal__c</columns>
    <columns>Taxonomy__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Config__c.Goal_Config</value>
    </filters>
    <label>Goal Config</label>
</ListView>