force-app/main/default/objects/RE_Config__c/listViews/Search_Config.listView-meta.xml
<ListView>
    <fullName>Search_Config</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Category__c</columns>
    <columns>Domain__c</columns>
    <columns>DomainCategory__c</columns>
    <columns>DomainImage__c</columns>
    <columns>DomainOrder__c</columns>
    <columns>IsMaster__c</columns>
    <columns>Subcategory__c</columns>
    <columns>Taxonomy__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Config__c.SearchConfig</value>
    </filters>
    <label>Search Config</label>
</ListView>